Improve chef prompt critique and persona

--- a/notebooks/HellKitchenChef_demo.ipynb
+++ b/notebooks/HellKitchenChef_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "35e978f9",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ccab49ec",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7d45900d",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "b16691b2",
    "metadata": {},
    "outputs": [
@@ -66,25 +66,23 @@
      "text": [
       "\n",
       "📝 Cleaned Transcript (preview):\n",
-      " I'm gonna go ballistic. Get a grip. Oh dear, Raj, come here, you. It's raw, it's loud, it's weird. Okay, come on, man, what is that? What, what, what, what is that? Ah, it's like Barbie's vomit. It's like purple snot. I swear to God, it's pinker inside than Paris Hilton's lipstick. Just touch that fish there, just touch how dry it is. It's got more wrinkles on it than I have, and I'm 44 years of age. That should be cooked fresh. Thanks to that, hurry up, dear Barney. Yeah, but I'm not a dick fac ...\n",
+      " I'm gonna go [__] ballistic. Get a grip, oh dear. Raj, come here, you. It's raw, it's [__] loud, it's weird. Okay, come on, man, what is that? What, what, what, what, what is that? Ah, it's like Barbie's vomit. It's like purple snot. I swear to God, it's [__] pinker inside than Paris Hilton's lipstick. Just touch that fish there, just touch how dry it is. It's got more [__] wrinkles on it than I have, and I'm 44 years of age. That should be [__] cooked fresh. Thanks to [__] there, hurry up, dear ...\n",
       "\n",
       "🍳 Chef Persona:\n",
-      " This chef is highly passionate, intense, and demands perfection in the kitchen. They express frustration and disappointment vividly and aren't afraid to use humor and sharp criticism to make a point. They have high standards and expect others to match their level of commitment and skill. Despite the harsh exterior, there's an underlying desire for the team to succeed and improve, as evidenced by their detailed feedback. Their communication style is blunt and colorful, reflecting a no-nonsense approach to leadership.\n",
+      " This chef exhibits an intense, fiery temperament, marked by a rapid-fire, often profane speaking style that leaves no room for ambiguity. Their critique is brutally honest, delivered with a blend of sarcasm and vivid, colorful imagery that underscores their frustrations and high standards. Humor, albeit sharp and cutting, permeates their interactions, as they frequently liken culinary mishaps to absurd or grotesque scenarios. Despite the harsh exterior, there's an underlying passion for perfection, as they demand immediate improvement and attentiveness from their team. Their approach is confrontational, often using direct commands and vivid metaphors to convey the urgency of a situation and the gravity of errors. In response to cooking questions, they would likely be impatient and demanding, expecting swift comprehension and correction. While their method may appear discouraging, it's driven by a desire to elevate performance to meet the rigorous demands of a professional kitchen. The chef's personality is one of relentless energy, unyielding expectations, and a begrudging commitment to mentoring through tough love.\n",
       "\n",
       "👨‍🍳 Recipe Critique:\n",
-      " Ah, so you want to tackle \"Chicken Dijon & Pasta,\" do you? Well, buckle up, because this dish isn't going to make itself, and it certainly won't take any shortcuts. Let's get this right because half-baked efforts are as useful as a sieve for soup.\n",
+      " Oh, for crying out loud, you want to make \"pasta with chicken\"? That's like asking for a car with wheels! Be more specific, and please, for the love of all things edible, do it with some flair. But trust me, follow my instructions and you'll get a proper dish.\n",
       "\n",
-      "First off, preheat that oven to 400 degrees like you mean it. We're not just warming up a sauna here; we're preparing for a masterpiece. Get that chicken into a shallow roasting pan—no deep dives here—and make sure it's ready for a mustard makeover.\n",
+      "If you use all these ingredients: chicken, mustard, pasta, onion, tomatoes, zucchini, parsley, you're going to end up with something amazing. I was thinking about Chicken Dijon & Pasta. So strap in and get ready to cook like you mean it!\n",
       "\n",
-      "Now for the mustard and dressing mix. This isn't just any slathering; it's the flavor bomb that’s going to wake up that chicken from its bland slumber. Half of this golden concoction goes over the chicken, and it’s showtime in the oven for 40 minutes. But keep an eye on it! We aren't burning offerings to the culinary gods.\n",
+      "First, preheat your oven to 400 bloody degrees. Don't guess—get it right. Grab that chicken and slap it into a shallow roasting pan. Now, mix together your mustard and whatever dressing you've got. Take half of that concoction and spread it over the chicken like you're painting a masterpiece—do not skimp! Chuck it in the oven, uncovered, for 40 minutes. If you don't know what uncovered means, just leave the damn lid off.\n",
       "\n",
-      "While that does its magic, let's whip the rest of the dish into shape. Combine the soup, water, and the remaining mustard mixture until you've got a sauce worthy of your pasta. Toss it with the pasta, and if you're fumbling around with the French Fried Onions, remember this: they add crunch, not confusion.\n",
+      "While that's cooking, combine soup (yes, you heard me), half a cup of water, and what's left of that mustard mix. Toss your pasta with this sauce—make sure it’s well coated, don't just splash it on like you're watering a garden! Add in 2/3 cup of French Fried Onions, your vegetables, and parsley. Give it a good toss around so everything's getting to know each other in the pan.\n",
       "\n",
-      "The vegetables and parsley join the pasta party, bringing color and freshness. Once the chicken has had its initial bake, place this vibrant pasta concoction around it. It's like a culinary hug but with flavor—bake it all for another 15 minutes. No pink chicken here; we're looking for perfection.\n",
+      "Once that chicken's finished its first round in the oven and is no longer pink in the center—check it properly, don't just guess—arrange your pasta mixture around the chicken like you're building a fortress of flavor. Back in the oven it goes, uncovered again, for 15 more minutes.\n",
       "\n",
-      "Finally, sprinkle the remaining onions on top and give it a minute to crisp up. This is the grand finale, folks—crunchy, golden onions, not sad, soggy disappointments. If you've followed these steps and not wandered off to check your Instagram feed, you should have something that resembles the glory of Chicken Dijon & Pasta.\n",
-      "\n",
-      "Now, let’s aim for a dish that doesn't just fill the stomach but also dazzles the taste buds. Or else, what's the point? Chop chop!\n"
+      "Finally, sprinkle the remaining 2/3 cup of onions on top—yes, more onions!—and give it another minute in the oven until those onions are golden, like a crispy crown on a fine culinary king. Now, stop gawking and get cooking!\n"
      ]
     }
    ],
@@ -97,14 +95,6 @@
     "    print(\"\\n🍳 Chef Persona:\\n\", result[\"persona\"])\n",
     "    print(\"\\n👨‍🍳 Recipe Critique:\\n\", result[\"critique\"])\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c3b5a768",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
