--- a/notebooks/chef_inferno_demo.ipynb
+++ b/notebooks/chef_inferno_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "35e978f9",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
     "\n",
     "# Local modules\n",
     "from transcript_utils import clean_transcript_text\n",
-    "from chef_rag import HellKitchenChef\n",
+    "from chef_rag import ChefInferno\n",
     "from chef_service import generate_chef_response\n",
     "from config import (\n",
     "    YOUTUBE_VIDEO_ID,\n",
